Añadido imagen y comentarios al ejercicio.

--- a/Multimedia/multimedia.html
+++ b/Multimedia/multimedia.html
@@ -7,12 +7,12 @@
   <body>
     <h1 style="background-color: peru;">IMAGENES</h1>
     
+    <h2>Waltuh, we need more chug juice waltuh</h2>
     <img src="img/waltuh.jpg" alt="waltuh" height="50%" width="50%" title="waltuh, im hàving a strok">
+    <h2>My honest reaction</h2>
+    <img src="img/saulG.jpeg" alt="Did you know you have rights? Constitution says you do">
 
     <h1>VIDEO</h1>
-
-    <video src="" poster="">
-    <source src="">
 
     <h1>AUDIO</h1>
 
