--- a/Multimedia/multimedia.html
+++ b/Multimedia/multimedia.html
@@ -14,7 +14,18 @@
 
     <h1>VIDEO</h1>
 
+    <video controls muted poster="img/angryCulot.jpeg">
+      <source src="vids/donky.mp4" type="video/mp4">
+    </video>
+
     <h1>AUDIO</h1>
+
+    <audio controls autoplay muted loop>
+      <source src="audio/Frase_de_Neil_Armstrong.mp3" type="audio/mp3">
+    </audio>
+    <audio controls autoplay muted loop>
+      <source src="audio/Frase_de_Neil_Armstrong.ogg" type="audio/ogg">
+    </audio>
 
     <h1>Objetios embebidos</h1>
 
