--- a/Multimedia/multimedia.html
+++ b/Multimedia/multimedia.html
@@ -14,7 +14,7 @@
 
     <h1>VIDEO</h1>
 
-    <video controls muted poster="img/angryCulot.jpeg">
+    <video controls muted poster="img/cat-donce.gif ">
       <source src="vids/donky.mp4" type="video/mp4">
     </video>
 
