--- a/index.html
+++ b/index.html
@@ -4,18 +4,31 @@
     <meta charset="utf-8">
     <title>Primera Web de AW</title>
   </head>
-  <body bgcolor="#A9A9A9">
-    <header>
-      <div style="background-color: darkred;">
-        <h1 style="color: white;">
-          Marcos Mañanes Ruiz | 2º SMR C | Aplicaciones Web
-        </h1>
-      </div>
-    </header>
-    <footer>
-      <h2>
-        Buranyu
-      </h2>
-    </footer>
+  <body>
+    <div style="background-color: black;">
+      <h1 style="color: white;">MARCOS MAÑANES RUIZ</h1>
+      <h2 style="color: white;">2º SMR C - Aplicaciones Web</h2>
+    </div>
+
+    <h3>PRIMER TRIMESTE</h3>
+
+    <div style="background-color: cornflowerblue;">
+      <p>Listas</p>
+      <ul>
+        <li><a href="Listas/index.html">Listas</a></li>
+      </ul>
+    </div>
+    <div style="background-color: coral;">
+      <p>Tablas</p>
+      <ul>
+        <li><a href="Tablas/horario.html">Horario</a></li>
+      </ul>
+    </div>
+    <div style="background-color: darkgoldenrod;">
+      <p>Multimedia</p>
+      <ul>
+        <li><a href="Multimedia/multimedia.html">Multimedia</a></li>
+      </ul>
+    </div>
   </body>
 </html>
