--- a/index.html
+++ b/index.html
@@ -30,5 +30,11 @@
         <li><a href="Multimedia/multimedia.html">Multimedia</a></li>
       </ul>
     </div>
+    <div style="background-color: yellowgreen;">
+      <p>Formularios</p>
+      <ul>
+        <li><a href="Formularios/formularios.html">Formularios</a></li>
+      </ul>
+    </div>
   </body>
 </html>
