--- a/Formularios/formularios2.html
+++ b/Formularios/formularios2.html
@@ -14,18 +14,36 @@
     <p><input type="text" value="ciber broma" disabled></p>
     <p>
       <input type="text" placeholder="soy lamentable, me eligen el ultimo" tabindex="3" size="70">
-      <input type="text" value="soy racista, tengo mas color y soy mejor que los dos, me elegiras primero" tabindex="1" size="70">
+      <input type="text" value="soy racista, 1tengo mas color y soy mejor que los dos, me elegiras primero" tabindex="1" size="70">
       <input type="text" placeholder="soy normal, toy por el medio" tabindex="2" size="70">
     </p>
-    <p><input type="text" value="esos son gilipollas, conmigo se entra con la Ñ" accesskey="Ñ"></p>
+    <p><input type="text" value="esos son gilipollas, conmigo se entra con la Ñ" accesskey="Ñ" size="36"></p>
+    <p>
+      <button type="button" onclick="mensaje('Jhon china')">
+        <img src="img/troll.jpeg" alt="clickme" width="32" height="32" style="vertical-align: middle;">
+        clickme
+      </button>
+      Tiene 1 euro? <input type="file">
+    </p>
+    <p>me dai el numero? <input type="tel"></p>
+    <p>un correito? <input type="email"></p>
+    <p>salsa? <input type="url" placeholder="pon un rick roll y te elimino de la vida" size="30"></p>
   </fieldset>
   <button type="submit">
-    <img src="img/açeptao.jpeg" alt="acpetao" width="32" height="32">
+    <img src="img/açeptao.jpeg" alt="acpetao" width="32" height="32" style="vertical-align: middle;">
     Dale mi loco, envialo
   </button>
   <button type="reset">
-    <img src="img/borrar.jpg" alt="borre" width="32" height="32">
+    <img src="img/borrar.jpg" alt="borre" width="32" height="32" style="vertical-align: middle;">
     Borré
   </button>
+
+
+  <script>
+    function mensaje(texto) {
+      alert(texto)
+    }
+  </script>
+
 </body>
 </html>
