--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
       <p>Formularios</p>
       <ul>
         <li><a href="Formularios/formularios.html">Formularios</a></li>
+        <li><a href="Formularios/formularios2.html">Formularios 2</a></li>
       </ul>
     </div>
+
+    <h3>SEGUNDO TRIMESTRE</h3>
+
+
   </body>
 </html>
