--- a/Formularios/formularios.html
+++ b/Formularios/formularios.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <form action="" method="get">
-    <p>Nombre <input type="text" name="Nombre" size="40" placeholder="Escribo su nombre" required></p>
+    <p class="colorHumilde">Nombre <input type="text" name="Nombre" size="40" placeholder="Escribo su nombre" required></p>
     <p>Apellidos: <input type="text" name="Apellidos" size="50" placeholder="Escriba sus Apellidos" required></p>
     <p>Sin animo de lucro:
       <input type="radio" name="opt" value="isr"> Tortilla de Patatas
@@ -18,7 +18,7 @@
     <p>Introduzca su Contraseña </p>
     <input type="password" placeholder="(4 caracteres minimo)" required minlength="4">
     <p> ¿Cuantas veces te has pasado el Dark Souls II? <input type="number" name="vecesPasadas"></p>
-    <p>Fecha y Hora de tu muerte: <input type="date" name="fecha"> <input type="time" name="hora"></p>
+    <p>Elija la fecha y Hora de tu muerte: <input type="date" name="fecha"> <input type="time" name="hora"></p>
     <p><input type="checkbox" name="chBox">☝️🤓</p>
     <p>Elija su destino: 
       <select>
