--- a/Tablas/horario.html
+++ b/Tablas/horario.html
@@ -3,29 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Horario</title>
-        <style>
-            .SOR {
-                background-color: cyan;
-            }
-            .SI {
-                background-color: pink;
-            }
-            .SR {
-                background-color: lightblue;
-            }
-            .AW {
-                background-color: lightsalmon;
-            }
-            .ING {
-                background-color: orange;
-            }
-            .EMP {
-                background-color: lightslategray;
-            }
-        </style>
+        <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <table border="1">
+        <table align="center" border="2">
             <caption><b>HORARIO 2º SMR C</b></caption>
             <tr align="center">
                 <th>HORA</th>
@@ -79,5 +60,13 @@
                 <td class="SOR">SOR</td>
             </tr>
         </table>
+        <br><br><br><br><br>
+        <p>
+           <img src="img/catthumbs.gif" alt="oks" width="250" height="250"> 
+           <img src="img/uraniumCat.gif" alt="ñam ñam" width="250" height="250">
+           <img src="img/cat-watermelon.gif" alt="ñom" width="250" height="250">
+           <img src="img/blackCat.jpeg" alt="what" width="250" height="250">
+           <img src="img/huh-cat-huh-m4rtin.gif" alt="huh?" width="210" height="250">
+        </p>
     </body>
 </html>
