--- a/index.html
+++ b/index.html
@@ -37,9 +37,15 @@
         <li><a href="Formularios/formularios2.html">Formularios 2</a></li>
       </ul>
     </div>
+    <div style="background-color: lightskyblue;">
+      <p>CSS</p>
+      <ul>
+        <li><a href="EjerciciosCSS/index.html">CSS</a></li>
+        <li><a href="EjerciciosCSS/ejercicio.html">Ejercicio 3.2</a></li>
+      </ul>
+    </div>
 
     <h3>SEGUNDO TRIMESTRE</h3>
-
 
   </body>
 </html>
